--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "sweetalert": "^2.1.2"
   },
   "scripts": {
-    "start": "PORT=443 react-scripts start",
+    "start": "set PORT=443 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
